// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavBar /> renders correctly 1`] = `
<div
  className=""
>
  <WithStyles(AppBar)
    position="static"
  >
    <WithStyles(Toolbar)>
      <WithStyles(IconButton)
        href="/"
      >
        <pure(HomeIcon) />
      </WithStyles(IconButton)>
      <WithStyles(Tabs)
        indicatorColor="primary"
        onChange={[Function]}
        value={0}
        variant="fullWidth"
      >
        <WithStyles(Tab)
          key=".0"
          label="Item 1"
        >
          <NavBarItem
            label="Item 1"
            to="#Item1"
          />
        </WithStyles(Tab)>
        <WithStyles(Tab)
          key=".1"
          label="Item 2"
        >
          <NavBarItem
            label="Item 2"
            to="#Item2"
          />
        </WithStyles(Tab)>
        <WithStyles(Tab)
          key=".2"
          label="Item 3"
        >
          <NavBarItem
            label="Item 3"
            to="#Item3"
          />
        </WithStyles(Tab)>
      </WithStyles(Tabs)>
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
</div>
`;

exports[`<NavBar /> renders correctly with className 1`] = `
<div
  className="custom-nav-bar"
>
  <WithStyles(AppBar)
    position="static"
  >
    <WithStyles(Toolbar)>
      <WithStyles(IconButton)
        href="/"
      >
        <pure(HomeIcon) />
      </WithStyles(IconButton)>
      <WithStyles(Tabs)
        indicatorColor="primary"
        onChange={[Function]}
        value={0}
        variant="fullWidth"
      >
        <WithStyles(Tab)
          key=".0"
          label="Item 1"
        >
          <NavBarItem
            label="Item 1"
            to="#Item1"
          />
        </WithStyles(Tab)>
        <WithStyles(Tab)
          key=".1"
          label="Item 2"
        >
          <NavBarItem
            label="Item 2"
            to="#Item2"
          />
        </WithStyles(Tab)>
        <WithStyles(Tab)
          key=".2"
          label="Item 3"
        >
          <NavBarItem
            label="Item 3"
            to="#Item3"
          />
        </WithStyles(Tab)>
      </WithStyles(Tabs)>
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
</div>
`;
